added recent file

--- a/test.html
+++ b/test.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Assessment</title>
-		<!-- <script type="text/javascript" src="./javascript/file1.js"></script> -->
+		
 		<link rel="stylesheet" type="text/css" href="./css/file.css">
-		<script src='https://kit.fontawesome.com/a076d05399.js'></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style>
 		#more {display: none;}
 		</style>
@@ -14,10 +14,10 @@
 			  <a class="zxc" href="#home">Home</a>
 			  <a class="vbn" href="#about">About</a>
 			  <a class="asd" href="#team">Team</a>
-			  <a class="fgh" href="event">Event</a>
-			  <i class='fab fa-facebook-f'></i>
-			  <i class='fab fa-invision'></i>
-			  <i class='fab fa-instagram'></i>
+			  <a class="fgh" href="#event">Event</a>
+			  <a href="#" class="fa fa-facebook"></a>
+			  <a href="#" class="fa fa-twitter"></a>
+			  <a href="#" class="fa fa-google"></a>
 			  <a class="alignright" href="demo1.html">Sign up</a>
 			  <a class="alignright1" href="demo1.html">Log in</a>
 			</nav><br><br><br><br><br><br>
@@ -27,11 +27,12 @@
 		  <button class="btn">Get Started</button>
 		  </div>
 		</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-		<div id="about" class="move">
+		<div id="about">
 			<div>
-			<div class="mySlides"><img src="images/img1.jpg" width="90%" height="500px"></div>
+		<div class="mySlides"><img src="images/img1.jpg" width="90%" height="500px"></div>
 			<div class="mySlides"><img src="images/img2.jpg" width="90%" height="500px"></div>
 			<div class="mySlides"><img src="images/img3.jpg" width="90%" height="500px"></div>
+			<script  src="./javascript/file1.js"></script>
 			<script>
 			var slideIndex = 0;
 			carousel();
@@ -54,7 +55,7 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span><span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa.<br>Fusce luctus vestibulum augue ut aliquet.</span></p>
 				<button onclick="myFunction()" id="myBtn">Read more</button>
 				<script>
-				function myFunction() {
+					function myFunction() {
 				  var dots = document.getElementById("dots");
 				  var moreText = document.getElementById("more");
 				  var btnText = document.getElementById("myBtn");
@@ -69,10 +70,166 @@
 				    moreText.style.display = "inline";
 				  }
 				}
+				
 				</script>
 
 			</div>
 		</div>
-		</div>	
+		</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+		<div id="team">
+		       	<div class="grid">
+		       		<h1>Our Dedicated<br>Professionals</h1>
+		       	</div>
+		       	<div class="alig">
+		       	<div class="container">
+		       		<img src="./images/img5.jpeg" height="150" width="200">
+		       		<p>Mithun</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img6.jpeg" height="150" width="200">
+		       		<p>Shyma</p>
+		       		<p class="text">Manager</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img7.jpeg" height="150" width="200">
+		       		<p>Nadhesh</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img8.jpeg" height="150" width="200">
+		       		<p>Chethan</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img9.jpeg" height="150" width="200">
+		       		<p>Krishna</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img10.jpeg" height="150" width="200">
+		       		<p>Rakshitha</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img11.jpeg" height="150" width="200">
+		       		<p>Ravikiran</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		       	<div class="container">
+		       		<img src="./images/img12.jpeg" height="150" width="200">
+		       		<p>Rakesh</p>
+		       		<p class="text">Software Developer</p>
+		       		<div class="overlay">
+		       		  <a href="#"title="User Profile">
+		       		    <i class="fa fa-facebook"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-twitter"></i>
+		       		  </a>
+		       		  <a href="#" title="User Profile">
+		       		    <i class="fa fa-google"></i>
+		       		  </a>
+		       		</div>
+		       	</div>
+		        </div>
+		        </div>
+		    <div id="event"  class="background">  
+		    <div class="one">
+		    	<p>Fri<br>4<br>May</p>
+		    <img src="./images/img.jpeg" class="imgalign">
+		    <p class="paralign"><b>Visvesvaraya Technological University (VTU, previously spelled "Visveswaraiah Technological University")</b> is a collegiate Public State University in Karnataka State of the Republic of India, established by the Government of Karnataka.[9] Apart from a few notable exceptions, VTU has authority over engineering education all over the state of Karnataka. It is a statutory requirement for colleges offering any program in engineering or technology in the state to be affiliated with the university.The university is named after M.
+		    </p>
+		    </div><br><br>
+		    <div class="one">
+		    	<p>Wed<br>5<br>June</p>
+		    	<img src="./images/img.jpeg" class="imgalign">
+		    	<p class="paralign"><b>Visvesvaraya Technological University (VTU, previously spelled "Visveswaraiah Technological University")</b> is a collegiate Public State University in Karnataka State of the Republic of India, established by the Government of Karnataka.[9] Apart from a few notable exceptions, VTU has authority over engineering education all over the state of Karnataka. It is a statutory requirement for colleges offering any program in engineering or technology in the state to be affiliated with the university.
+		    </p>
+		    </div><br><br>
+		    <div class="one">
+		    	<p>Fri<br>16<br>July</p>
+		    	<img src="./images/img.jpeg" class="imgalign">
+		    	<p class="paralign"><b>Visvesvaraya Technological University (VTU, previously spelled "Visveswaraiah Technological University")</b> is a collegiate Public State University in Karnataka State of the Republic of India, established by the Government of Karnataka.[9] Apart from a few notable exceptions, VTU has authority over engineering education all over the state of Karnataka. It is a statutory requirement for colleges offering any program in engineering or technology in the state to be affiliated with the university.
+		    </p>
+		    </div>
+		    </div>    		
 	</body>
 </html>
